--- a/.github/workflows/msdevopssec.yml
+++ b/.github/workflows/msdevopssec.yml
@@ -34,3 +34,7 @@ jobs:
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+        
+    # Triggers the workflow on push or pull request events but only for the main branch
+pull_request:
+  branches: ["main"]
